# agent-economy

./: .gitignore  .semgrepignore  AGENTS.md  DELEGATE.md  README.md  docker-compose.dev.yml  docker-compose.yml  justfile
.beads/: issues.jsonl  metadata.json
.claude/commands/: codex.md
.githooks/: post-checkout  post-merge  pre-commit  pre-push  prepare-commit-msg
agents/: .env.template  config.yaml  justfile  pyproject.toml  pyrightconfig.json  roster.yaml  test_api_keys.py
agents/tests/: conftest.py
config/codespell/: ignore.txt
config/semgrep/: no-default-values.yml  no-direct-sql.yml  no-pytest-skip.yml  no-silent-catch.yml  no-silent-exception.yml  no-type-suppression.yml
docs/: service-implementation-guide.md
docs/checks/: pytestarch-guide.md
docs/codex/: demo-replay-implementation.md
docs/codex-tasks/: 2026-03-02-all-open-tickets-implementation.md  2026-03-02-architecture-ci-and-cross-service-deps.md  2026-03-02-architecture-tests-all-services.md  2026-03-02-complete-gateway-migration.md  2026-03-02-db-gateway-refactoring.md  2026-03-02-e2e-infra-completion.md  2026-03-02-e2e-playwright-infra.md  2026-03-02-e2e-test-bug-fixes.md  2026-03-02-full-ticket-implementation.md  2026-03-02-gateway-integration-tests-and-puppet-agents.md  2026-03-02-gateway-only-storage-enforcement.md  2026-03-02-gateway-stores-implementation.md  2026-03-02-p2-api-test-tickets.md  2026-03-02-remaining-tiers.md  2026-03-02-rename-gateway-stores-move-fakes.md  2026-03-02-sparkline-timeseries-implementation.md  2026-03-02-task-view-live-wiring.md  2026-03-02-tier2b-bugfixes.md  2026-03-02-unemployment-calculation-tests.md  2026-03-02-unemployment-sparkline.md  CODEX-INSTRUCTIONS.md  central-bank-acceptance-tests.md  central-bank-platform-agent-cleanup.md  central-bank-review-fixes.md  codex-ui.md  court-platform-agent-fixup.md  court-service-tests.md  e2e-test-gap-coverage.md  error-code-casing-migration.md  fix-task-board-502-error-handling.md  identity-service-tests.md  legacy-identity-cleanup.md  reputation-service-tests.md  runtime-error-to-service-error-migration.md  self-service-account-creation.md  task-board-decomposition.md  task-board-platform-agent-migration.md  task-board-tests.md  ui-api-wiring.md  ui-integration-tests.md  (+1 more)
docs/demo/: demo-transcript.md
docs/demo-scenarios/: demo-scenario-1-content-studio.md  demo-scenario-2-classification-arena.md
docs/diagrams/: system-sequence-diagrams.md
docs/explanations/: why-public-key-cryptography.md
docs/java/: project_goals_and_architectural_decisions_claude.md  project_goals_and_architectural_decisions_codex.md
docs/main/: agent-task-economy.md
docs/mockups/: nyse-landing-page.html  nyse-task-lifecycle.html
docs/plans/: 2026-02-28-observatory-backend-implementation.md  2026-02-28-observatory-backend-scaffold.md  2026-02-28-observatory-frontend-plan.md  (+34 more)
scripts/: ci-quiet-hook.sh  init-hooks.sh  setup_guard.sh  stats.sh  tail_logs.py
services/ui/: config.yaml  justfile  pyproject.toml
services/ui/data/web/: index.html  observatory.html  task.html
services/ui/data/web/assets/: landing.js  observatory.js  shared.js  style.css  task.js
services/ui/src/ui_service/: app.py  config.py  schemas.py
services/ui/src/ui_service/core/: exceptions.py  lifespan.py  state.py
services/ui/src/ui_service/routers/: __init__.py  agents.py  events.py  health.py  metrics.py  proxy.py  quarterly.py  tasks.py
services/ui/src/ui_service/services/: agents.py  events.py  metrics.py  proxy.py  quarterly.py  tasks.py
services/ui/tests/architecture/: conftest.py
services/ui/tests/e2e/: __init__.py  conftest.py  test_cross_page.py  test_infrastructure.py  test_landing.py  test_observatory.py  test_smoke.py  test_task_lifecycle.py
services/ui/tests/e2e/fixtures/: conftest.py  seed_db.py
services/ui/tests/e2e/helpers/: conftest.py  db_helpers.py
services/ui/tests/e2e/pages/: __init__.py  conftest.py  landing.py  observatory.py  task.py
services/ui/tests/integration/: conftest.py  helpers.py  test_agent_streak.py  test_agents.py  test_endpoints.py  test_events.py  test_health.py  test_metrics.py  test_metrics_delta.py  test_metrics_history.py  test_metrics_sparklines.py  test_quarterly.py  test_sparkline_data.py  test_sparklines_unemployment.py  test_task_drilldown_contract.py  test_task_list.py  test_tasks.py  test_ticker_deltas.py  test_unemployment_calculation.py
services/ui/tests/unit/: test_config.py
services/ui/tests/unit/routers/: conftest.py  test_health.py
tools/: justfile  pyproject.toml  seed-economy.sh
tools/src/math_task_factory/: __init__.py  __main__.py  factory.py  llm_dressup.py
(+626 files in other folders)
